--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,16 @@
   height: 40px;
 }
 
+.logo:hover{
+  height: 47px;
+  transition: 0.7s ease all;
+}
+
+.display:active{
+  transition: all 0.6s ease;
+  background-color: #322f2f;
+}
+
 body{
   text-align: center;
   background: url("../img/background.jpg");
@@ -61,7 +71,7 @@ p{
   padding-bottom: 9%  ;
 }
 
-span{
+span {
   color: #DDDDDD;
   display: flex;
   flex-direction: column;
@@ -71,10 +81,13 @@ span{
 .big{
   font-size: 17vw;
   font-weight: bold;
-}
+  }
+
+
+
+
 .little{
   font-size: 3vw;
-  text-align: right;
 }
 
 
@@ -167,4 +180,56 @@ button {
 
 button:hover{
   font-size: 20px;
+}
+
+
+
+.roller{
+  height: 3vw;
+  line-height: 4vw;
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+.roller #rolltext {
+  position: absolute;
+  top: 0;
+  animation: slide 8s infinite;
+}
+
+@keyframes slide {
+  0%{
+    top:0;
+  }
+  12.5%{
+    top: -4rem;
+  }
+  25%{
+    top: -8rem;
+  }
+  37.5%{
+    top: -12rem;
+  }
+  50%{
+    top: -16rem;
+}
+  62.5%{
+    top: -20rem;
+  }
+  75%{
+    top: -24rem;
+  }
+  87.5%{
+    top: -28rem;
+  }
+  100%{
+    top: -32rem;
+  }
+
+
 }
