Corrections diverses et ajout d'un dépôt.

--- a/css/style.css
+++ b/css/style.css
@@ -80,11 +80,13 @@ span {
   font-weight: bold;
   }
 
-
-
-
 .little{
-  font-size: 3vw;
+  font-size: 5vw;
+  
+}
+
+.dev{
+  font-size: 4vw;
 }
 
 
