--- a/css/style.css
+++ b/css/style.css
@@ -7,19 +7,17 @@
   transition: 0.7s ease all;
 }
 
-.display:active{
-  transition: all 0.6s ease;
-  background-color: #322f2f;
-}
+
 
 body{
   text-align: center;
-  background: url("../img/background.jpg");
-  background-size: cover;
+  background: #fcfefe;
+  color: #000;
 
 }
 hr{
   top: 0.8em;
+  margin-top: 5vw;
   animation:         thread 8s infinite;
 }
 
@@ -35,7 +33,7 @@ hr{
 }
 
 p, h1, h2, h3, h4{
-  color: #DDDDDD;
+  color: #000000;
 }
 
 h2{
@@ -65,24 +63,24 @@ p{
   flex-direction: column;
   align-items: center;
   width: 100%;
-  padding-bottom: 9%  ;
+  background-color: #e3fafa;
 }
 
 span {
-  color: #DDDDDD;
+  color: #000000;
   display: flex;
   flex-direction: column;
 
 }
 
 .big{
-  font-size: 17vw;
+  font-size: 23vw;
   font-weight: bold;
   }
 
 .little{
   font-size: 5vw;
-  
+
 }
 
 .dev{
@@ -91,7 +89,7 @@ span {
 
 
 a li{
-  color: #b8b7b7;
+  color: #DDDDDD;
   transition: all 0.3s ease;
 
 }
@@ -105,11 +103,12 @@ li:hover{
 
 
 .navbar {
+  background-color: #5caaaa;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 10px;
-
+  scroll-behavior: smooth;
 
 }
 
@@ -131,6 +130,11 @@ li:hover{
   margin: 0 10px;
 }
 
+footer{
+  background-color: #f76b8a;
+}
+
+
 footer ul a {
   text-decoration: none;
   margin: 0 10px;
@@ -151,14 +155,6 @@ footer ul a {
 .li:hover{
   font-size: 12px;
 }
-
-
-.project{
-  border: 2px solid #DDDDDD;
-  padding: 3vw;
-  margin-bottom: 7vw;
-}
-
 
 button {
   background-color: #FFFFFF;
@@ -231,4 +227,9 @@ button:hover{
   }
 
 
+}
+
+.info {
+  display: flex;
+flex-flow: column;
 }
