--- a/css/slideshow.css
+++ b/css/slideshow.css
@@ -2,11 +2,19 @@
   border: 2px solid #DDDDDD;
   padding: 3vw;
   margin-bottom: 7vw;
+  text-align: center;
+  padding: 20px;
+  margin: 20px 0;
+  background-color: #f9f9f9;
+  border: 1px solid #ddd;
+  border-radius: 10px;
+  box-shadow: 0 7px 6px rgba(0, 0, 0, 0.1);
 }
 
 .display{
   cursor: pointer;
   color: #000000;
+  
 }
 
 .display:hover{
@@ -17,3 +25,4 @@
   transition: all 0.6s ease;
   background-color: #322f2f;
 }
+
