Ajout d'un formulaire pour la page contact.

--- a/css/style.css
+++ b/css/style.css
@@ -241,3 +241,23 @@ justify-content: space-around;
 .signature{
   text-align: center;
 }
+
+form {
+  max-width: 400px;
+  margin: auto;
+}
+
+label {
+  display: block;
+  margin: 10px 0 5px;
+}
+
+input, textarea {
+  width: 100%;
+  background-color: #e6e6e8;
+  padding: 10px;
+  margin-bottom: 15px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
