--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,4 @@
-html{
-  scroll-behavior: smooth;
-}
 
-body{
-  text-align: center;
-  background: #fcfefe;
-  color: #000;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-
-}
-
-hr{
-  top: 0.8em;
-  margin-top: 5vw;
-  animation:         thread 8s infinite;
-}
 
 @keyframes thread {
   0%   { width: 90%; }
@@ -25,32 +7,9 @@ hr{
   100% { width: 90%; }
 }
 
-.part{
-  margin:8%
-}
 
-p, h1, h2, h3, h4{
-  color: #000000;
-}
 
-h2{
-text-decoration: underline
-}
 
-h3{
-  font-size: 2vw;
-}
-
-p{
-  font-size: calc(15px + 0.390625vw);
-  text-align: justify;
-  margin-left: 15%;
-  margin-right: 15%;
-}
-
-a{
-color: black;
-}
 
 
 .description{
@@ -60,124 +19,16 @@ color: black;
 
 }
 
-.nom{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 100%;
-  background-color: #e3fafa;
-}
-
-span {
-  color: #000000;
-  display: flex;
-  flex-direction: column;
-
-}
-
-.big{
-  font-size: 23vw;
-  font-weight: bold;
-  }
-
-.little{
-  font-size: 5vw;
-
-}
 
 .dev{
   font-size: 4vw;
 }
 
 
-a li{
-  color: #DDDDDD;
-  transition: all 0.3s ease;
-
-}
-
-
-li:hover{
-  color: white;
-  font-size: 18px;
-  text-decoration: underline;
-}
-
-
-.navbar {
-  background-color: #5caaaa;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 10px;
-  scroll-behavior: smooth;
-
-}
-
-
-
-
-
-.navbar ul {
-  display: flex;
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  width: 100%;
-}
-
-.navbar ul a {
-  text-decoration: none;
-
-  margin: 0 10px;
-}
-
-footer{
-  background-color: #f76b8a;
-  height: 100%;
-}
-
-
-footer ul a {
-  text-decoration: none;
-  margin: 0 10px;
-  list-style: none;
-
-}
-
-
-.navbar ul .left {
-  margin-right: auto;
-}
-
-.navbar ul li {
-  display: inline-block;
-}
-
 .li:hover{
   font-size: 12px;
 }
 
-button {
-  background-color: #FFFFFF;
-  border: 1px solid #222222;
-  border-radius: 8px;
-  box-sizing: border-box;
-  color: #222222;
-  cursor: pointer;
-  display: inline-block;
-  font-size: 16px;
-  font-weight: 600;
-  outline: none;
-  padding: 13px 23px;
-  text-align: center;
-  transition: all 0.3s ease;
-}
-
-
-button:hover{
-  font-size: 20px;
-}
 
 
 
@@ -261,3 +112,43 @@ input, textarea {
   border-radius: 5px;
 }
 
+
+.en-bas{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+
+}
+
+.contact{
+  display: flex;
+  flex-direction: column;
+
+}
+
+.social{
+  display: flex;
+  flex-direction: column;
+  list-style-type: none;
+}
+
+
+.en-bas a li{
+  list-style-type: none;
+  text-decoration: none;
+
+}
+
+.en-bas a {
+  text-decoration: none;
+}
+
+.en-bas a li:hover{
+  color: #afafaf;
+  transition: 0.3s ease all;
+  font-size: 1.1vw;
+}
+
+textarea{
+  resize: vertical;
+}
