--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,146 @@
+html{
+  scroll-behavior: smooth;
+}
+
+body{
+  text-align: center;
+  background: #fcfefe;
+  color: #000;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+
+
+}
+
+hr{
+  top: 0.8em;
+  margin-top: 5vw;
+  animation:         thread 8s infinite;
+}
+
+
+p, h1, h2, h3, h4{
+  color: #000000;
+}
+
+
+h2{
+  text-decoration: underline
+}
+
+h3{
+  font-size: 2vw;
+}
+
+span {
+  color: #000000;
+  display: flex;
+  flex-direction: column;
+
+}
+
+
+footer{
+  background-color: #17577f;
+  height: 100%;
+}
+
+
+footer ul a {
+  text-decoration: none;
+  margin: 0 10px;
+  list-style: none;
+
+}
+
+
+.content{
+  padding:70px;
+}
+
+.navbar {
+  position: fixed;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+  top: 0;
+  width: 100%;
+}
+
+
+.navbar a li{
+  color: #000000;
+  transition: all 0.3s ease;
+  font-size: 2vw;
+  font-weight: bold;
+}
+
+.navbar a li:hover{
+  color: #dddddd;
+
+}
+
+
+.navbar ul {
+  display: flex;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+}
+
+.navbar ul a {
+  text-decoration: none;
+
+  margin: 0 10px;
+}
+
+
+
+.navbar ul .left {
+  margin-right: auto;
+}
+
+
+p{
+  font-size: calc(15px + 0.390625vw);
+  text-align: justify;
+  margin-left: 15%;
+  margin-right: 15%;
+}
+
+a{
+  color: black;
+}
+
+button {
+  background-color: #FFFFFF;
+  border: 1px solid #222222;
+  border-radius: 8px;
+  box-sizing: border-box;
+  color: #222222;
+  cursor: pointer;
+  display: inline-block;
+  font-size: 16px;
+  font-weight: 600;
+  outline: none;
+  padding: 13px 23px;
+  text-align: center;
+  transition: all 0.3s ease;
+}
+
+
+button:hover{
+  font-size: 20px;
+}
+
 
 
 .banner{
-  background: url("../img/man.jpg");
+  background: url("../img/background.png");
   display: flex;
   flex-direction: column;
   min-height: 100vh;
@@ -17,6 +156,7 @@
   font-size: 4vw;
   position: absolute;
   top: 50%;
+  color: white;
 }
 
 
@@ -28,6 +168,7 @@
   font-size: 2vw;
   position: absolute;
   top: 60%;
+  color: white;
 }
 
 @media screen and (max-width: 730px) {
@@ -40,3 +181,193 @@
     top: 55%;
   }
 }
+
+
+.about{
+  background-color: blue;
+}
+
+.projet{
+
+}
+
+.project{
+  border: 2px solid #DDDDDD;
+  padding: 3vw;
+  margin-bottom: 7vw;
+  text-align: center;
+  background-color: #f9f9f9;
+  border-radius: 10px;
+  box-shadow: 0 7px 6px rgba(0, 0, 0, 0.1);
+}
+
+.display{
+  cursor: pointer;
+  color: #000000;
+
+}
+
+.display:hover{
+  background-color: #5caaaa;
+}
+
+.display:active{
+  transition: all 0.6s ease;
+  background-color: #322f2f;
+}
+
+
+
+@keyframes thread {
+  0%   { width: 90%; }
+  50%  { width: 90%; }
+  80%  { width: 0; }
+  100% { width: 90%; }
+}
+
+
+
+
+
+
+.description{
+  margin-left: 10vw;
+  margin-right: 10vw;
+  text-align: justify;
+
+}
+
+
+.dev{
+  font-size: 4vw;
+}
+
+
+.li:hover{
+  font-size: 12px;
+}
+
+
+
+
+.roller{
+  height: 3vw;
+  line-height: 4vw;
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+.roller #rolltext {
+  position: absolute;
+  top: 0;
+  animation: slide 8s infinite;
+}
+
+@keyframes slide {
+  0%{
+    top:0;
+  }
+  12.5%{
+    top: -4rem;
+  }
+  25%{
+    top: -8rem;
+  }
+  37.5%{
+    top: -12rem;
+  }
+  50%{
+    top: -16rem;
+  }
+  62.5%{
+    top: -20rem;
+  }
+  75%{
+    top: -24rem;
+  }
+  87.5%{
+    top: -28rem;
+  }
+  100%{
+    top: -32rem;
+  }
+
+
+}
+
+.info {
+  display: flex;
+  flex-direction : row;
+  justify-content: space-around;
+
+}
+
+.signature{
+  text-align: center;
+}
+
+form {
+  max-width: 400px;
+  margin: auto;
+}
+
+label {
+  display: block;
+  margin: 10px 0 5px;
+}
+
+input, textarea {
+  width: 100%;
+  background-color: #e6e6e8;
+  padding: 10px;
+  margin-bottom: 15px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+
+.en-bas{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+
+}
+
+.contact{
+  display: flex;
+  flex-direction: column;
+
+}
+
+.social{
+  display: flex;
+  flex-direction: column;
+  list-style-type: none;
+}
+
+
+.en-bas a li{
+  list-style-type: none;
+  text-decoration: none;
+
+}
+
+.en-bas a {
+  text-decoration: none;
+}
+
+.en-bas a li:hover{
+  color: #afafaf;
+  transition: 0.3s ease all;
+  font-size: 1.1vw;
+}
+
+textarea{
+  resize: vertical;
+}
+
