--- a/css/index.css
+++ b/css/index.css
@@ -3,9 +3,9 @@ html{
 }
 
 body{
+  background: url("../img/background.webp");
+
   text-align: center;
-  background: #fcfefe;
-  color: #000;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -20,10 +20,6 @@ hr{
   animation:         thread 8s infinite;
 }
 
-
-p, h1, h2, h3, h4{
-  color: #000000;
-}
 
 
 h2{
@@ -72,14 +68,14 @@ footer ul a {
 
 
 .navbar a li{
-  color: #000000;
+  color: #9c9c9c;
   transition: all 0.3s ease;
   font-size: 2vw;
   font-weight: bold;
 }
 
 .navbar a li:hover{
-  color: #dddddd;
+  color: #f3f3f3;
 
 }
 
@@ -140,7 +136,6 @@ button:hover{
 
 
 .banner{
-  background: url("../img/background.png");
   display: flex;
   flex-direction: column;
   min-height: 100vh;
@@ -184,19 +179,15 @@ button:hover{
 
 
 .about{
-  background-color: blue;
+  background-color: #333349;
 }
 
-.projet{
-
-}
 
 .project{
   border: 2px solid #DDDDDD;
   padding: 3vw;
   margin-bottom: 7vw;
   text-align: center;
-  background-color: #f9f9f9;
   border-radius: 10px;
   box-shadow: 0 7px 6px rgba(0, 0, 0, 0.1);
 }
@@ -207,9 +198,6 @@ button:hover{
 
 }
 
-.display:hover{
-  background-color: #5caaaa;
-}
 
 .display:active{
   transition: all 0.6s ease;
